// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`front-matter-toml.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+++
  
title: Hello
slug: home

+++

<h1>
  Hello world!</h1>

=====================================output=====================================
+++
  
title: Hello
slug: home

+++

<h1>Hello world!</h1>

================================================================================
`;

exports[`front-matter-toml.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
+++
  
title: Hello
slug: home

+++

<h1>
  Hello world!</h1>

=====================================output=====================================
+++
  
title: Hello
slug: home

+++

<h1>Hello world!</h1>

================================================================================
`;

exports[`front-matter-yaml.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---yaml
  
title: Hello
slug: home

---

<h1>
  Hello world!</h1>

=====================================output=====================================
---yaml
  
title: Hello
slug: home

---

<h1>Hello world!</h1>

================================================================================
`;

exports[`front-matter-yaml.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
---yaml
  
title: Hello
slug: home

---

<h1>
  Hello world!</h1>

=====================================output=====================================
---
title: Hello
slug: home
---

<h1>Hello world!</h1>

================================================================================
`;

exports[`test.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<head>
  <style>a {}</style>
  <script>1  + 2</script>
</head>

=====================================output=====================================
<!DOCTYPE html>
<head>
  <style>
    a {}
  </style>
  <script>
    1  + 2
  </script>
</head>

================================================================================
`;

exports[`test.html format 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!doctype html>
<head>
  <style>a {}</style>
  <script>1  + 2</script>
</head>

=====================================output=====================================
<!DOCTYPE html>
<head>
  <style>
    a {
    }
  </style>
  <script>
    1 + 2;
  </script>
</head>

================================================================================
`;
